# dynamic-enum

./: main.py  mypy.ini  pyproject.toml  pytest.ini
src/delivery/streamlit/: app.py
src/delivery/streamlit/components/: form.py  json.py
src/domain/: countries_rest_client.py
src/domain/models/: country.py  form_model.py
src/infrastructure/: http_countries_rest_client.py
tests/acceptance/: test_app.py
tests/integration/infrastructure/: test_http_countries_rest_client.py
tests/unit/delivery/streamlit/components/: test_form.py  test_json.py
