[tool.poetry]
name = "dynamic-enum"
version = "0.1.0"
description = "Dynamic enum example"
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
requests = "^2.32.3"
pytest = "^8.3.4"
expects = "^0.9.0"
doublex = "^1.9.6.1"
doublex-expects = "^0.7.1"
streamlit-pydantic = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
