[tool.poetry]
name = "dynamic-enum"
version = "0.1.0"
description = "Dynamic enum example"
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
requests = "^2.32.3"
streamlit-pydantic = { git = "https://github.com/LukasMasuch/streamlit-pydantic.git", rev = "9f84145b6b6e74cdff3a7815ab75b0464c4d4f24" }

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
pytest-watch = "^4.2.0"
expects = "^0.9.0"
doublex = "^1.9.6.1"
doublex-expects = "^0.7.1"
mypy = "^1.14.1"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
